implemented tracing with opentelemetry and jwt token.
